# 12.48

./: CMakeLists.txt  Makefile  README.md  epd  web.md
example/: CMakeLists.txt  example.cpp
examples/: CMakeLists.txt  EPD_12in48B_test.c  EPD_12in48_test.c  example.cpp  main.c  test.h
include/: epd1248b.hpp
include/GUI/: GUI_BMPfile.h  GUI_BMPfile.hpp  GUI_Paint.h  GUI_Paint.hpp
include/config/: DEV_Config.h  Debug.hpp
include/ePaper/: EPD_12in48.h  EPD_12in48.hpp  EPD_12in48b.h  EPD_12in48b.hpp  epd12in48.hpp  guiPaint.hpp  piDriver.hpp  util.hpp
include/fonts/: font20.hpp  font24.hpp  font8.hpp  fonts.hpp
include/restServer/: .epaperProcessor.hpp.swp  basic_controller.hpp  controller.hpp  epaperProcessor.hpp  microsvc_controller.hpp  network_utils.hpp  runtime_utils.hpp  usr_interrupt_handler.hpp
lib/: epd7in5bpaint.hpp  libepaper.so.1  libepaper.so.1.0.0
lib/Fonts/: font12.hpp  font16.hpp  fonts.hpp
lib/GUI/: GUI_BMPfile.c  GUI_BMPfile.h  GUI_Paint.c  GUI_Paint.h
lib/e-Paper/: EPD_12in48.c  EPD_12in48.h
src/: CMakeLists.txt  piDriver.cpp
src/GUI/: GUI_BMPfile.c  GUI_BMPfile.cpp  GUI_Paint.c  GUI_Paint.cpp
src/config/: DEV_Config.c  DEV_Config.cpp  RPI_sysfs_gpio.c  RPI_sysfs_gpio.cpp
src/ePaper/: EPD_12in48.c  EPD_12in48.cpp  EPD_12in48b.c  EPD_12in48b.cpp
test/: REST_TEST_PATCH.http  REST_TEST_POST.http  REST_TEST_PUT.http
