FILE(GLOB_RECURSE EXAMPLE_SOURCES RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.cpp *.c)


SET(EXAMPLE_TARGET _${EXAMPLE_BINARY})

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include/restServer)

ADD_EXECUTABLE(${EXAMPLE_TARGET} ${EXAMPLE_SOURCES})

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/lib)

TARGET_LINK_LIBRARIES(${EXAMPLE_TARGET}  pthread  bcm2835 )

SET_TARGET_PROPERTIES(${EXAMPLE_TARGET} PROPERTIES OUTPUT_NAME ${EXAMPLE_BINARY})

ADD_DEFINITIONS(-DTEST)
